<resources>
    <string name="app_name">Quiz App</string>
    <string name="choice1">A</string>
    <string name="choice2">B</string>
    <string name="choice3">C</string>
    <string name="choice4">D</string>
    <string name="color_button">Change Color</string>
    <string name="text_box_label">QUIZ APP</string>
    <string name="name_hint">What is your name?</string>
    <string name="hint_incr">Increment?</string>
    <string name="leaderButton">Leaderboard</string>
    <string name="startButton">Start Quiz</string>
    <string name="ent">Enter your name</string>
</resources>


