<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_box_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <EditText
        android:id="@+id/responseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@+id/textBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/response2EditText"/>
    <EditText
        android:id="@+id/response2EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_incr"
        app:layout_constraintTop_toBottomOf="@+id/responseEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/clickButton"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:text="@string/choice1"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clickButton3"
        app:layout_constraintTop_toBottomOf="@+id/response2EditText" />

    <Button
        android:id="@+id/clickButton2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:text="@string/choice2"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickButton" />

    <Button
        android:id="@+id/clickButton3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:text="@string/choice3"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toRightOf="@+id/clickButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/response2EditText" />

    <Button
        android:id="@+id/clickButton4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/choice4"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toRightOf="@+id/clickButton2"
        app:layout_constraintTop_toBottomOf="@+id/clickButton3" />


</androidx.constraintlayout.widget.ConstraintLayout>