<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz"
    android:background="@color/quizColor">

    <TextView
        android:id="@+id/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/choice1"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clickButton3"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/clickButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:text="@string/choice2"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clickButton4"
        app:layout_constraintTop_toBottomOf="@+id/clickButton" />

    <Button
        android:id="@+id/clickButton3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/choice3"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/clickButton"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/clickButton4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:text="@string/choice4"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/clickButton2"
        app:layout_constraintTop_toBottomOf="@+id/clickButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>